chandeliers-lus/tests/compile_fail/ui/causality/redef-var-oo.stderr
error: Attempt to redefine a, when a prior item already defines it
 --> tests/compile_fail/ui/causality/redef-var-oo.rs:5:35
  |
5 |     node foo() returns (a : bool; a : int);
  |                                   ^
  |
note: Already defined here
 --> tests/compile_fail/ui/causality/redef-var-oo.rs:5:25
  |
5 |     node foo() returns (a : bool; a : int);
  |                         ^
